# tree-sitter-nu

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  eslint.config.mjs  example-file.nu  go.mod  grammar.js  internal.txt  nurfile  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  setup.py  t.nu  test.nu  tree-sitter.json  ts.nu
.github/neovim/: init.lua
.github/workflows/: ci.yml  lint.yml  main.yml  nvim-tests.yml  publish.yml
bindings/c/: tree-sitter-nu.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_nu/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNu/: nu.h
bindings/swift/TreeSitterNuTests/: TreeSitterNuTests.swift
corpus/ctrl/: match.nu
corpus/decl/: alias.nu  def.nu  export-env.nu  extern.nu  module.nu  script.nu
corpus/expr/: binary-expr.nu  cell_path.nu  closure.nu  list.nu  record.nu  subexpr.nu  unary-expr.nu  units.nu  values.nu
corpus/pipe/: blocks.nu  commands.nu  pipe.nu
corpus/stmt/: assignment.nu  const.nu  hide.nu  let.nu  mut.nu  overlay.nu  register.nu
examples/: main.rs
ftdetect/: nu.lua
ftplugin/: nu.lua
installation/: helix.md  neovim.md
lua/: tree-sitter-nu.lua
plugin/: init.lua
queries/: highlights.scm
queries/nu/: highlights.scm  indents.scm  injections.scm  textobjects.scm
resources/: sample-config.json
script/: known-failures.txt  parse-examples
src/: grammar.json  grammar_BACKUP_35023.json  grammar_BASE_35023.json  grammar_LOCAL_35023.json  grammar_REMOTE_35023.json  node-types.json  parser.c  scanner.c
src/tree_sitter/: parser.h
test/corpus/: custom_command_1.txt  line_comment.txt  string_literal.txt
test/corpus/comment/: comment.nu
test/corpus/ctrl/: do.nu  else.nu  error.nu  match.nu  try.nu
test/corpus/decl/: alias.nu  attribute.nu  def.nu  export-env.nu  module.nu  raw-strings.nu  use.nu
test/corpus/expr/: binary-expr.nu  cell_path.nu  closure.nu  identifier.nu  list.nu  range.nu  raw-strings.nu  record.nu  spread-operator.nu  subexpr.nu  table.nu  unary-expr.nu  units.nu  values.nu
test/corpus/pipe/: blocks.nu  commands.nu  env.nu  pipe.nu  redirection.nu  where.nu
test/corpus/stmt/: assignment.nu  const.nu  hide.nu  let.nu  mut.nu  overlay.nu  register.nu  source.nu
test/highlight/: cellpath.nu  comma_after_param_completer.nu  punctuation.nu  verbose_type_signature.nu
