[package]
name = "tree-sitter-nu"
description = "nu grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "nu"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-nu"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

# [[bin]]
# name = "ts-test"
# path = "src/main.rs"

[dev-dependencies]
cc = "1.0"

[dependencies]
tree-sitter-language = "0.1.0"
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
