[package]
name = "tree-sitter-nu"
description = "nu grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "nu"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/nushell/tree-sitter-nu"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

# [[bin]]
# name = "ts-test"
# path = "src/main.rs"

[dev-dependencies]
cc = "1.1.30"

[dependencies]
tree-sitter-language = "0.1"
tree-sitter = "0.25"

[build-dependencies]
cc = "1.1.30"
