[package]
name = "tree-sitter-nu"
description = "nu grammar for the tree-sitter parsing library"
version = "0.0.1"
authors = ["The Nushell Contributors"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "nu"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/nushell/tree-sitter-nu"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
